<resources>
    <string name="app_name">NINJA WARRIOR</string>
    <string name="game_name">NINJA WARRIOR</string>
    <string name="play">JUGAR</string>
    <string name="points">PUNTUACIONS</string>
    <string name="exit">SORTIR</string>
    <string name="settings_icon">settings</string>
    <string name="info_icon">info</string>
    <string name="info_text">Joc cret per Carlos Galera \n\n Versio 1.0</string>
    <string name="close_info">Tancar</string>
    <string name="hint_nom">Introdueix el teu nom</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="music">Reporduir musica</string>
    <string name="music_description">Es reprodueix musica de fons</string>
    <string name="ninja_description">Escollir Ninja</string>
    <string name="enemics">Nombre d\'enemics</string>
    <string name="ninja">Ninja</string>
    <string name="enemics_descripcio">Quantitat inicial d\'enemics</string>
    <string name="formatEnemics">Has introduit valors numerics com a numero d\'enemics</string>
    <string name="nomBuit">El nom no pot estar buit</string>
</resources>