<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/messages_header">

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="cbpMusica"
            android:title="@string/music"
            android:summary="@string/music_description"/>

        <ListPreference
            android:key="lpNinja"
            android:title="@string/ninja"
            android:summary="@string/ninja_description"
            android:dialogTitle="Indicar Ninja"
            android:entries="@array/ninja_names"
            android:entryValues="@array/ninja_images"
            android:defaultValue="1"
            android:layout="@layout/list_preference_icon"/>

        <EditTextPreference
            android:defaultValue="false"
            android:key="etpEnemics"
            android:title="@string/enemics"
            android:summary="@string/enemics_descripcio"
            android:inputType="number"/>

    </PreferenceCategory>

</PreferenceScreen>
